fix: Popover z-index issue on left sidebar

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -161,6 +161,7 @@ a {
       box-sizing: border-box;
       padding: 0 4rem;
       position: fixed;
+      z-index: 1;
       @media all and (max-width: $fullPageWidth) {
         position: initial;
         flex-direction: row;
